samples/_failures_safe/1761422774_e89fcd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0859d82.c: In function ‘main’:
./samples/SAFE/__tmp_f0859d82.c:123:9: error: expected expression at end of input
  123 |         if (IS_EMPTY_STR(line))
      |         ^~
./samples/SAFE/__tmp_f0859d82.c:123:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f0859d82.c:123:9: error: expected declaration or statement at end of input
